--- a/public/src/scss/_layout.scss
+++ b/public/src/scss/_layout.scss
@@ -8,9 +8,7 @@
 }
 
 .header {
-  @include media-breakpoint-up(md) {
-    height: 600px;
-  }
+  height: 600px;
 
   &-logo {
     margin: auto;
@@ -29,6 +27,10 @@
     display: flex;
     align-items: baseline;
     color: $grey;
+
+    &--upper {
+      margin-bottom: 5rem;
+    }
   }
 
   &-logo {
