--- a/public/src/scss/_hero.scss
+++ b/public/src/scss/_hero.scss
@@ -46,19 +46,19 @@
 }
 
 .header .page-view .project:nth-child(1) {
-  background-image: url(../img/hero-1.png);
+  background-image: url(../img/hero-1.jpg);
 }
 
 .header .page-view .project:nth-child(2) {
-  background-image: url(../img/hero-2.png);
+  background-image: url(../img/hero-2.jpg);
 }
 
 .header .page-view .project:nth-child(3) {
-  background-image: url(../img/hero-3.png);
+  background-image: url(../img/hero-3.jpg);
 }
 
 .header .page-view .project:nth-child(4) {
-  background-image: url(../img/hero-4.png);
+  background-image: url(../img/hero-4.jpg);
 }
 
 .header .page-view .project.hide {
